# media_learn

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt  optional_test.cpp  two_pointers.cpp  unique_ptr_test.cpp
ffmpeg/: AVCodec_test.cpp  AVFormatContext_test.cpp  CMakeLists.txt  Muxing_test.cpp  avio_reading.cpp  decode_audio.cpp  encoding_test.cpp  hello_ffmpeg.cpp  metadata.cpp  muxing.c  muxing.cpp  write_frames.cpp
ffmpeg/avformat/: Demuxing_test.cpp
libpng/: CMakeLists.txt  png_test.cpp
sdl/: CMakeLists.txt  clipping_sprite.cpp  easy_cleanup.h  extension_lib.cpp  handle_events.cpp  hello_sdl.cpp  multi_function.cpp  res_path.cpp  res_path.h  sdl_font.cpp
shell/: 2_1.sh
